--- a/frontend/reactWithUI5/src/pages/Home/Home.css
+++ b/frontend/reactWithUI5/src/pages/Home/Home.css
@@ -22,3 +22,18 @@
   width: 70%;
   height: 70%;
 }
+
+.books-grid {
+  display: grid;
+  grid-template-columns: auto auto auto;
+  gap: 1rem;
+  width: 100%;
+}
+
+.search-bar-wrapper {
+  margin-top: 2rem;
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+  align-items: center;
+}
